[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[dependencies]
solana-sdk = "=2.3.1"
solana-program = "=2.3.1"
spl-token = "=6.0.0"
thiserror = "1.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"

[dev-dependencies]
solana-program-test = "=2.3.1"
solana-validator = "=2.3.1"
tokio = "1.40"