[workspace]
members = [
    "native/litesvm-tests",
]
exclude = [
    "anchor/anchor-escrow",
    "litesvm",
    "mollusk"
]
resolver = "2"

[package]
name = "native-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "native_escrow"

[dependencies]
bytemuck = { version = "1.18.0", features = ["derive", "const_zeroed"]}
solana-program = "2.0.10"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "5.0.2", features = ["no-entrypoint"] }

[dev-dependencies]
mollusk-svm = "0.0.5"
solana-sdk = "2.0.10"
spl-associated-token-account = "5.0.1"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1